typescript/checker/tests/conformance/es6/Symbols/symbolType18.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            44,
        ),
        hi: BytePos(
            45,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType18.ts:3:5
  |
3 | var x: symbol | Foo;
  |     ^

